# sonic-atlas

./: .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  pyproject.toml
data/corpus/: README.md
data/corpus_fsd50k/: manifest.csv
data/corpus_librispeech/: manifest.csv
data/processed/creative_features/01_baseline_features/: evaluation_notes.md
demos/creative_features/: evaluation.html
demos/foundations/: cnn_feature_demo.html  cqt_wavelet_demo.html  phase_perception_demo.html  timbre_demo.html  wave_packet_demo.html
demos/references/: spectral_reference.html
docs/: architecture.md  data_sources.md  roadmap.md  vision.md
docs/foundations/: 01_discretization_precision.md  02_phase_perception.md  04_timbre_characterization.md  fundamental_analysis.md
docs/literature/: 00_research_plan.md  01_first_round_review.md  02_feature_taxonomy.md  03_experiment_protocol.md
docs/zh/: architecture.md  data_sources.md  roadmap.md  vision.md
docs/zh/foundations/: 03_wave_packets.md  05_cnn_feature_extraction.md
docs/zh/literature/: 00_research_plan.md  01_first_round_review.md  02_feature_taxonomy.md  03_experiment_protocol.md
experiments/: build_corpus.py
experiments/creative_features/01_baseline_features/: README.md  evaluate_features.py  extract_features.py  make_manifest.py  prepare_corpus.py  project_features.py  schemas.py
experiments/wave_packet_sparse/: precompute_5methods.py  precompute_final.py  test_strategies.py  test_strategies2.py  test_strategies3.py  test_strategies4.py  test_strategies5.py
