[project]
name = "sonic-atlas"
version = "0.1.0"
description = "Extracting abstract sound features from music and natural audio as compositional materials"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "pulcerto" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "scikit-learn>=1.7.0",
    "umap-learn>=0.5.7",
    "matplotlib>=3.10.0",
    "plotly>=6.6.0",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]
deep = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # research repo — no Python package to install

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
